<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".triangleActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triangle_calculate"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alas"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />
    <EditText
        android:id="@+id/inAlas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Alas"
        android:textSize="20sp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="40dp"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />
    <EditText
        android:id="@+id/inTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Tinggi"
        android:textSize="20sp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="40dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

</LinearLayout>